# subtext

./: .dockerignore  .gitignore  CLAUDE.md  CODE POLISH SETUP.md  Dockerfile  LICENSE  README.md  SPEC.md  deploy.sh  main.py  pyproject.toml
.claude/commands/polish/: all.md  docs.md  naming.md  readiness.md  redflags.md  testing.md
.github/workflows/: ci.yml
docs/standards/: GUIDE.md  ousterhout.md  python-specifics.md  readable-code.md  rust-specifics.md
ingest/: build_indices.py  build_schema.py  compute_sentiment.py  diagnose_classification.py  download_data.py  explore_data.py  explore_glopardo.py  load_glopardo.py  load_transcripts.py  requirements.txt  run_ingest.sh
pipeline/: build_indices.py  build_schema.py  compute_sentiment.py  diagnose_classification.py  download_data.py  explore_data.py  explore_glopardo.py  load_glopardo.py  load_transcripts.py  pyproject.toml  requirements.txt  run_ingest.sh
pipeline/tests/: test_classification.py  test_normalization.py  test_sentiment.py
site/: Cargo.toml
site/src/: about.rs  app.rs  chart.rs  company.rs  db.rs  home.rs  lexicon.rs  main.rs  search.rs  sectors.rs  sql.rs  transcript.rs  types.rs
site/style/: main.css
skills/: naming-review.md  review-docs.md  review-for-red-flags.md  review-project-readiness.md  review-testing.md
